# chatbot_advisor

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile.api  pyproject.toml
backend/src/: app.py
backend/src/api/: chat.py
backend/src/utils/: guardrails_config.py  llm_handler.py  session_manager.py
frontend/advisor-frontend/: .dockerignore  Dockerfile.frontend  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/advisor-frontend/src/: App.js  index.css
frontend/advisor-frontend/src/components/: ChatInput.js  ChatMessage.js  VoiceRecorder.js
frontend/advisor-frontend/src/hooks/: useTextToSpeech.js  useVoiceRecording.js
frontend/advisor-frontend/src/services/: api.js
